--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -34,10 +34,12 @@
 .gridContainer {
   height: 100vh;
   display: grid;
+  border: 1px solid red;
   gap: 10px;
   grid-template-columns: 1fr 1fr 1fr 0.4fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 0.8fr 1fr 1fr 1fr;
   padding: 10px;
+  position: relative;
   grid-template-areas:
     "Framework voiceTone voiceTone voiceTone Logo Logo Typo"
     "Framework voiceTone voiceTone voiceTone Logo Logo Typo"
@@ -58,7 +60,33 @@
 
 .icon {
   grid-area: icon;
+  border: 1px solid #4000FF;
+  position: relative;
+  z-index: 2;
 }
+
+
+/* .icon::after {
+  content: '';
+  position: absolute;
+  left: 100%;
+  top: -100vh;
+  width: 1px;
+  height: 200vh;
+  background-color: #ddd;
+  z-index: -1;
+}
+
+.icon::after {
+  content: '';
+  position: absolute;
+  right: 100%;
+  bottom: 0;
+  width: 1px;
+  height: 200vh;
+  background-color: #ddd;
+  z-index: -1;
+} */
 
 .imagery {
   grid-area: Imagery;
