--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -36,17 +36,13 @@
   display: grid;
   gap: 10px;
   grid-template-columns: 1.2fr 1.7fr 0.3fr 1.7fr 1.2fr;
-  grid-template-rows: 1fr 1fr 1fr 0.8fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 0.23fr 1fr;
   padding: 10px;
   position: relative;
   grid-template-areas:
     "Framework voiceTone voiceTone Logo Typo"
-    "Framework voiceTone voiceTone Logo Typo"
-    "Framework voiceTone voiceTone Logo Typo"
     "Framework dropColor icon Logo Motion"
     "Graphy dropColor Imagery Imagery Motion"
-    "Graphy dropColor Imagery Imagery Motion"
-    "Graphy dropColor Imagery Imagery  Motion";
 }
 
 .voiceTone {
@@ -59,33 +55,9 @@
 
 .icon {
   grid-area: icon;
-  /* border: 1px solid #4000FF; */
   position: relative;
   z-index: 2;
 }
-
-
-/* .icon::after {
-  content: '';
-  position: absolute;
-  left: 100%;
-  top: -100vh;
-  width: 1px;
-  height: 200vh;
-  background-color: #ddd;
-  z-index: -1;
-}
-
-.icon::after {
-  content: '';
-  position: absolute;
-  right: 100%;
-  bottom: 0;
-  width: 1px;
-  height: 200vh;
-  background-color: #ddd;
-  z-index: -1;
-} */
 
 .imagery {
   grid-area: Imagery;
