--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,36 +1,3 @@
-.container {
-  height: 100vh;
-  background-color: white;
-  padding: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(10, 1fr);
-  gap: 0;
-  width: 24rem;
-  height: 24rem;
-}
-
-.cell {
-  border-right: 1px dotted #9ca3af;
-  border-bottom: 1px dotted #9ca3af;
-  height: 100%;
-  width: 100%;
-}
-
-.cellNoRightBorder {
-  border-right: none;
-}
-
-.cellNoBottomBorder {
-  border-bottom: none;
-}
-
 .gridContainer {
   height: 100vh;
   display: grid;
@@ -38,7 +5,7 @@
   grid-template-columns: 1.2fr 1.7fr 0.3fr 1.7fr 1.2fr;
   grid-template-rows: 1fr 0.23fr 1fr;
   padding: 10px;
-  position: relative;
+  /* position: relative; */
   grid-template-areas:
     "Framework voiceTone voiceTone Logo Typo"
     "Framework dropColor icon Logo Motion"
@@ -55,42 +22,28 @@
 
 .icon {
   grid-area: icon;
-  position: relative;
-  z-index: 2;
 }
 
 .imagery {
   grid-area: Imagery;
-  position: relative;
-  z-index: 2;
 }
 
 .logo {
   grid-area: Logo;
-  position: relative;
-  z-index: 2;
 }
 
 .framework {
   grid-area: Framework;
-  position: relative;
-  z-index: 2;
 }
 
 .graphy {
   grid-area: Graphy;
-  position: relative;
-  z-index: 2;
 }
 
 .typo {
   grid-area: Typo;
-  position: relative;
-  z-index: 2;
 }
 
 .motion {
   grid-area: Motion;
-  position: relative;
-  z-index: 2;
 }
